--- a/MyTrade/Views/User/TopUpList.cshtml
+++ b/MyTrade/Views/User/TopUpList.cshtml
@@ -24,17 +24,22 @@
                         </div>
                         <div class="card-body">
                             <div class="row">
-                                <div class="col-md-4">
+                                @*<div class="col-md-3">
+                                    User ID
+                                    @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control", @Placeholder = "LoginId" ,@readonly=""})
+
+                                </div>*@
+                                <div class="col-md-3">
                                             From Date
                                             @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control", @Placeholder = "From Date", @readonly = true })
                                         
                                 </div>
-                                <div class="col-md-4">
+                                <div class="col-md-3">
                                             To Date
                                             @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @Placeholder = "To Date", @readonly = true })
                                       
                                 </div>
-                                <div class="col-md-4">
+                                <div class="col-md-3">
                                     <div class="form-group mt-3">
                                         <input class="btn btn-success pull-left" type="submit" value="Search" id="Search" name="Search" />
                                     </div>
@@ -48,6 +53,7 @@
                                             <th>Name</th>
                                             <th>Product Name</th>
                                             <th>Topup MTG Token/USDT</th>
+                                            <th>Activation MTG Token</th>
                                             @*<th>Used For</th>*@
                                             @*<th>BV</th>*@
                                             @*<th>Is Calculated</th>*@
@@ -56,6 +62,7 @@
                                             <th>TPS Percentage</th>
                                             <th>Days</th>
                                             <th>Date</th>
+                                            <th>TopUp Id</th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -71,6 +78,7 @@
                                                         <td>@Item.Name</td>
                                                         <td>@Item.ProductName</td>
                                                         <td>@Item.PinAmount</td>
+                                                        <td>@Item.ActivationMTGToken</td>
                                                         @*<td>@Item.UsedFor</td>*@
                                                         @*<td>@Item.BV</td>*@
                                                         @*<td>@Item.IsCalculated</td>*@
@@ -79,6 +87,7 @@
                                                         <td>@Item.ROIPercentage %</td>
                                                         <td><a class="btn btn-info btn-sm" href="/Wallet/ViewTPS?InvId=@Item.InvestmentId">@Item.PackageDays</a></td>
                                                         <td>@Item.TopUpDate</td>
+                                                        <td>@Item.Topupid</td>
                                                     </tr>
                                                     i++;
                                                 }
