--- a/MyTrade/Views/Shared/_Layout.cshtml
+++ b/MyTrade/Views/Shared/_Layout.cshtml
@@ -86,8 +86,9 @@
         ***********************************-->
         <div class="nav-header">
             <a href="/user/UserDashboard" class="brand-logo">
-                <img src="~/MyTradeWebsite/assets/img/logo-2.png" class="img-fluid" style="width:120px;" />
-                <img src="~/UserPanel/images/MtgCoinPng.png" class="brand-title" />
+                <img src="~/UserPanel/images/MtgCoinPng.png" class="img-fluid" style="width:120px;" />
+                @*<img src="~/UserPanel/images/MtgCoinPng.png" class="brand-title" />*@
+                <h4 class="brand-title">My Trade</h4>
             </a>
 
             <div class="nav-control">
