--- a/MyTrade/Views/Home/Login.cshtml
+++ b/MyTrade/Views/Home/Login.cshtml
@@ -31,7 +31,11 @@
                             <div class="col-xl-12">
                                 <div class="auth-form">
                                     <div class="text-center mb-3">
-                                        <a href="/Home/index"><img src="~/MytradeWebsite/assets/img/logo-2.png" style="width:170px" alt=""></a>
+                                        <a href="/Home/index">
+                                            <img src="~/UserPanel/images/MtgCoinPng.png" class="img-fluid" style="width:170px;" />
+                                            <h3 class="text-white">My Trade</h3>
+                                             @*<img src="~/MytradeWebsite/assets/img/logo-2.png" style="width:170px" alt="">*@
+                                        </a>
                                     </div>
                                     <h4 class="text-center mb-4">Sign in your account</h4>
                                     <form action="/Home/LoginAction" method="post">
