--- a/MyTrade/Views/Shared/_UserLayout.cshtml
+++ b/MyTrade/Views/Shared/_UserLayout.cshtml
@@ -132,8 +132,9 @@
         ***********************************-->
         <div class="nav-header">
             <a href="/user/UserDashboard" class="brand-logo">
-                <img src="~/MyTradeWebsite/assets/img/logo-2.png" class="img-fluid" style="width:120px;" />
-               <img src="~/UserPanel/images/MtgCoinPng.png" class="brand-title" /> 
+                <img src="~/UserPanel/images/MtgCoinPng.png" class="img-fluid" style="width:120px;" />
+               @*<img src="~/UserPanel/images/MtgCoinPng.png" class="brand-title" />*@ 
+                <h4 class="brand-title">My Trade</h4>
             </a>
 
             <div class="nav-control">
@@ -1007,7 +1008,7 @@
     <!-- Dashboard 2 -->
     @*<script src="/UserPanel/js/dashboard/dashboard-4.js"></script>*@
     <script src="/UserPanel/js/deznav-init.js"></script>
-    <script src="/UserPanel/js/demo.js"></script>
+    @*<script src="/UserPanel/js/demo.js"></script>*@
 
     <script>
         jQuery(document).ready(function () {
