--- a/MyTrade/Views/Admin/AdminDashboard.cshtml
+++ b/MyTrade/Views/Admin/AdminDashboard.cshtml
@@ -9,7 +9,30 @@
     {
         height:initial !important;
     }
+
+    divdash>h2{
+    margin-left: 21px;
+    margin-top: -62px;
+    position: fixed;
+    float: inherit;
+    z-index: 30;
+    }
+    
+    @@media only screen and (max-width: 768px) {
+    divdash>h2{
+    margin-left: 142px;
+    margin-top: -52px;
+    position: fixed;
+    float: inherit;
+    z-index: 30;
+    }
+  }
 </style>
+
+<divdash>
+    <h2>DASHBOARD</h2>
+</divdash>
+
     <div class="container-fluid">
     <div class="row">
         <div class="col-xl-3 col-lg-4 col-md-4 col-sm-12 col-12 layout-spacing">
