--- a/MyTrade/Views/User/UserDashBoard.cshtml
+++ b/MyTrade/Views/User/UserDashBoard.cshtml
@@ -12,7 +12,30 @@
     .form-control.custom-image-select-1 {
         height: 50px;
     }
+
+    divdash>h2{
+    margin-left: 357px;
+    margin-top: 26px;
+    position: fixed;
+    float: inherit;
+    z-index: 30;
+    }
+    
+    @@media only screen and (max-width: 768px) {
+    divdash>h2{
+    margin-left: 140px;
+    margin-top: 26px;
+    position: fixed;
+    float: inherit;
+    z-index: 30;
+    }
+  }
+
 </style>
+
+<divdash>
+    <h2>DASHBOARD</h2>
+</divdash>
 
 <div class="content-body">
     <!-- row -->
