--- a/MyTrade/Views/User/TopUpList.cshtml
+++ b/MyTrade/Views/User/TopUpList.cshtml
@@ -62,7 +62,7 @@
                                             <th>TPS Percentage</th>
                                             <th>Days</th>
                                             <th>Date</th>
-                                            <th>TopUp Id</th>
+                                            @*<th>TopUp Id</th>*@
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -87,7 +87,7 @@
                                                         <td>@Item.ROIPercentage %</td>
                                                         <td><a class="btn btn-info btn-sm" href="/Wallet/ViewTPS?InvId=@Item.InvestmentId">@Item.PackageDays</a></td>
                                                         <td>@Item.TopUpDate</td>
-                                                        <td>@Item.Topupid</td>
+                                                        @*<td>@Item.Topupid</td>*@
                                                     </tr>
                                                     i++;
                                                 }
