--- a/MyTrade/Views/User/UserDashBoard.cshtml
+++ b/MyTrade/Views/User/UserDashBoard.cshtml
@@ -347,11 +347,11 @@
                             <div class="form-check custom-checkbox me-5 mb-2">
                                 <input type="checkbox" class="form-check-input" id="customCheck9">
                                 <label class="form-check-label" for="customCheck9">
-                                    <span class="d-block text-black font-w500">Bitcoin</span>
-                                    <span class="fs-12">BTC</span>
+                                    <span class="d-block text-black font-w500">Rupees</span>
+                                    <span class="fs-12">Rupees</span>
                                 </label>
                             </div>
-                            <div class="form-check custom-checkbox me-5 mb-2">
+                            @*<div class="form-check custom-checkbox me-5 mb-2">
                                 <input type="checkbox" class="form-check-input" id="customCheck91">
                                 <label class="form-check-label" for="customCheck91">
                                     <span class="d-block text-black font-w500">Ripple</span>
@@ -378,7 +378,7 @@
                                     <span class="d-block text-black font-w500">LiteCoin</span>
                                     <span class="fs-12">LTC</span>
                                 </label>
-                            </div>
+                            </div>*@
                         </div>
                         <div id="lineChart"></div>
                     </div>
