--- a/MyTrade/Views/Master/BalanceTransfer.cshtml
+++ b/MyTrade/Views/Master/BalanceTransfer.cshtml
@@ -1,6 +1,6 @@
 ﻿@model MyTrade.Models.Master
 @{
-    ViewBag.Title = "BalanceTransfer";
+    ViewBag.Title = "BrokerageDeduction";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -13,7 +13,7 @@
                     <div class="widget-header">
                         <div class="row">
                             <div class="col-xl-12 col-md-12 col-sm-12 col-12">
-                                <h4>Balance Transfer</h4>
+                                <h4>Brokerage Deduction</h4>
                                 <span class="text-danger" style="margin-left: 13px;">
                                     @TempData["Transfermsg"]
                                     @TempData["UpdateBalancetransfer"]
