--- a/MyTrade/Views/User/UserDashBoard.cshtml
+++ b/MyTrade/Views/User/UserDashBoard.cshtml
@@ -34,7 +34,7 @@
 </style>
 
 <divdash>
-    <h2>DASHBOARD</h2>
+    <h2>Dashboard</h2>
 </divdash>
 
 <div class="content-body">
@@ -287,13 +287,13 @@
                                         <span class="text-black pe-3"><img src="~/UserPanel/images/mtg.png" /> &nbsp;@ViewBag.TotalDrAmount </span>
                                     </div>
                                 </div>
-                                <div class="col-6 text-end">
+                                @*<div class="col-6 text-end">
                                     <a href="javascript:void(0);" class="btn btn-primary light btn-rounded"><i class="las la-download scale5 me-2"></i>Get Report</a>
-                                </div>
+                                </div>*@
                             </div>
                             <div id="chartBarRunning" class="bar-chart"></div>
                         </div>
-                        <div class="tab-pane fade" id="Week">
+                        @*<div class="tab-pane fade" id="Week">
                             <div class="row">
                                 <div class="d-flex col-6 align-items-center">
                                     <div class="fs-18 font-w600 me-3">
@@ -310,8 +310,8 @@
                                 </div>
                             </div>
                             <div id="chartBarRunning2" class="bar-chart"></div>
-                        </div>
-                        <div class="tab-pane fade" id="Year">
+                        </div>*@
+                        @*<div class="tab-pane fade" id="Year">
                             <div class="row">
                                 <div class="d-flex col-6 align-items-center">
                                     <div class="fs-18 font-w600 me-3">
@@ -328,7 +328,7 @@
                                 </div>
                             </div>
                             <div id="chartBarRunning3" class="bar-chart"></div>
-                        </div>
+                        </div>*@
                     </div>
                 </div>
             </div>
@@ -691,6 +691,12 @@
                             </div>
                         </div>
                     }
+
+
+
+
+
+
                     <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 col-12">
                         <div class="card overflow-hidden">
                             <div class="card-header align-items-start border-0 pb-0">
@@ -1232,6 +1238,8 @@
 @*<script src="~/plugins/apex/apexcharts.min.js"></script>
     <script src="~/plugins/apex/custom-apexcharts.js"></script>*@
 @*<script src="~/assets/js/libs/jquery-3.1.1.min.js"></script>*@
+
+
 
 
 
