--- a/MyTradeMTG/Views/Shared/_UserLayout.cshtml
+++ b/MyTradeMTG/Views/Shared/_UserLayout.cshtml
@@ -142,7 +142,7 @@
         ***********************************-->
         <div class="nav-header">
             <a href="/user/UserDashboard" class="brand-logo">
-                <img src="~/UserPanel/images/MtgCoinPng.png" class="img-fluid" style="width:120px;" />
+                <img src="~/UserPanel/images/MtgCoinPng.png" class="img-fluid" style="width:80px;" />
                 @*<img src="~/UserPanel/images/MtgCoinPng.png" class="brand-title" />*@
                 <h4 class="brand-title">My Trade</h4>
             </a>
@@ -256,6 +256,7 @@
                                     <li><a href="/Wallet/AddWallet">Wallet Request</a></li>
                                     <li><a href="/Wallet/WalletList">Wallet Request List</a></li>
                                     <li><a href="/Wallet/WalletLedgerList">Wallet Ledger</a></li>
+                                    <li><a href="/User/MTGPurchaseSell">MTG Purchase Sell</a></li>
                                 }
                             }
                         </ul>
