--- a/MyTradeMTG/Views/Shared/_UserLayout.cshtml
+++ b/MyTradeMTG/Views/Shared/_UserLayout.cshtml
@@ -274,6 +274,7 @@
                                     <li><a href="/Wallet/AddWallet">Wallet Request</a></li>
                                     <li><a href="/Wallet/WalletList">Wallet Request List</a></li>
                                     <li><a href="/Wallet/WalletLedgerList">Wallet Ledger</a></li>
+                                    <li><a href="/User/WalletTransfer">Direct Transfer</a></li>
                                     <li><a href="/User/MTGPurchaseSell">MTG Purchase Sell</a></li>
                                 }
                             }
@@ -337,6 +338,7 @@
                             <li><a href="/user/TreeTTP"> Level Tree TTP</a></li>
                             <li><a href="/user/Tree"> Level Tree TPS</a></li>
                             <li><a href="/Downline/AssociateTree"> Direct List</a></li>
+                         
                         </ul>
                     </li>
                     <li>
