--- a/MyTradeMTG/Views/User/MTGPurchaseSell.cshtml
+++ b/MyTradeMTG/Views/User/MTGPurchaseSell.cshtml
@@ -82,7 +82,9 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">Add Details</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                <button type="button" class="btn-close" data-bs-dismiss="modal">
+                    <span class="close_icon">&times;</span>
+                </button>
             </div>
             <div class="modal-body row">
                 <div class="col-xl-6 mb-3">
